# mini-async-runtime

./: .gitignore  404.html  Cargo.toml  index.html  motivation.html  print.html  readme.md  searchindex.js  searchindex.json
async_io/: api.html  building_blocks.html  core-abstractions.html  implementation_details.html  intro.html  io_uring.html  non_blocking_mode.html  step_1_ononblock.html  step_2_sqe.html  step_3_cqe.html
executor/: api.html  architecture.html  async-await.html  core-abstractions.html  future.html  implementation-details.html  intro.html  join_handle.html  life-of-a-task.html  local_executor.html  pinned-threads.html  primitive-intro.html  raw_task.html  task.html  task_queue.html  waker.html  waker_implementation.html
mdbook/: book.toml
mdbook/src/: SUMMARY.md  motivation.md
mdbook/src/async_io/: api.md  building-blocks.md  core-abstractions.md  intro.md  io_uring.md  life.md  non_blocking_mode.md  step_1_ononblock.md  step_2_sqe.md  step_3_cqe.md
mdbook/src/executor/: api.md  architecture.md  async-await.md  core-abstractions.md  future.md  intro.md  join_handle.md  life-of-a-task.md  local_executor.md  pinned-threads.md  primitive-intro.md  task.md  (+4 more)
src/: lib.rs  parking.rs  pollable.rs  reactor.rs
src/executor/: executor_queues.rs  local_executor.rs  local_executor_builder.rs  local_executor_test.rs  mod.rs  placement.rs  queue_manager.rs  task_queue.rs
src/net/: async_networking.rs  mod.rs  networking_test.rs
src/sys/: mod.rs  source.rs  uring.rs
src/task/: header.rs  join_handle.rs  mod.rs  raw.rs  state.rs  task.rs  utils.rs
