[package]
name = "mini-async-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
futures-lite = "1.13.0"
iou = "0.3.3"
nix = { version = "0.27.1", features = ["sched", "fs"] }

polling = "2.8.0"
scoped-tls = "1.0.1"
tracing = "0.1.40"
